<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory android:title="@string/app_name">-->
    <!--android:summary="@string/app_summary"-->
    <Preference
        android:icon="@mipmap/ic_launcher"
        android:selectable="false"
        android:title="@string/app_name" />
    <Preference
        android:key="pref_version_key"
        android:selectable="false"
        android:summary=""
        android:title="@string/pref_version_title" />
    <Preference
        android:summary="@string/pref_features_summary"
        android:selectable="false"
        android:title="@string/pref_features_title" />
    <Preference
        android:summary="@string/pref_usage_summary"
        android:selectable="false"
        android:title="@string/pref_usage_title" />
    <Preference
        android:summary="@string/pref_link_summary"
        android:title="@string/pref_link_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/pref_link_summary" />
    </Preference>

</PreferenceScreen>

