<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="willemw12.downloadlink.activit.MainActivity">

    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/action_edit_and_download"
        android:title="@string/action_edit_and_download_title"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="ifRoom" />
    <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/action_paste_and_download"
        android:title="@string/action_paste_and_download_title"
        android:icon="@drawable/ic_content_paste_white_24dp"
        app:showAsAction="ifRoom" />
    <!--android:actionProviderClass="android.widget.ShareActionProvide"-->
    <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"-->
    <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/action_share_clipboard"
        android:title="@string/action_share_clipboard_title"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/screen_settings_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/screen_about_title"
        app:showAsAction="never" />

</menu>

